﻿===============================================================================
20.42.2

Updates:
Added etl::crc8_opensafety
Added etl::crc16_opensafety_a and etl::crc16_opensafety_b
Added etl::crc64_iso
Added etl::type_lists_are_convertible
Made etl::closure constexpr for C++14
Made invocation of delegate consrexpr for C++14
#1132 Request: Make type_def Methods Noexcept

Fixes:
Fix gamma tests (removed integral tests)
#1126 to_arithmetic does not compile on C++98
#1150 Bug in the void etl::unlink(first, last) for bidirectional links.
#1151 test failure in i386 in 20.42.1: test_replace_strings in test_string_utilities.c fails

Pull Requests:
#955  Implements deferred callback timer with optional priority
#1147 Fix compile error in closure.h by using etl::forward

===============================================================================
20.42.1

Pull Requests:
#1147 Fix compile error in closure.h by using etl::forward

===============================================================================
20.42.0

Updates:
Removed redundant ETL_USING_WIDE_CHARACTERS
#1118 Constexpr constructible flat_map, map, and set containers.
      Added etl::const_map,      etl::const_map_ext,
            etl::const_multimap, etl::const multimap_ext
            etl::const_set,      etl::const_set_ext,
            etl::const_multiset, etl::const multiset_ext

Fixes:
#1126 to_arithmetic-does-not-compile-on-C++98
#1128 Request: Make Delegate Methods noexcept
#1130 Use of etl::mem_copy for overlaped areas
#1132 Make type_def Methods Noexcept
#1143 v20.41.x, risc-v (esp32-c3) "No user defined specialisation of etl::underlying_type for this type"

Pull Requests:
#1131 Fix usage of template keyword
#1136 Fix gamma.h on i386
#1137 Add etl::closure
#1138 Ignore deprecation of std::float_denorm_style
#1139 Cleanup to get more independent of std
#1140 Use std::byteswap only if available
#1141 Fix build of tuple on clang >= 19
#1142 Fix tests on big endian
#1144 Add support for CRC8-NRSC5